# coova-chilli

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  COPYING  CREDITS  ChangeLog  Contributing  LICENSE  Makefile  Makefile.am  README  README.md  acsite.m4  bootstrap  bootstrap2  chilli.h  chillispot.spec.in  config.h  config.h.in  config.status  configure.ac  configure.in  coova-chilli.spec  coova-chilli.spec.in  coovachilli-doxygen.conf  libtool
.github/workflows/: actions.yml
bstring/: Makefile.am  bstraux.c  bstraux.h  bstrlib.c  bstrlib.h  snprintf.c
conf/: Makefile.am  Makefile.in  chilli.conf  chilli.conf.in  chilli.in  chilli.init  coova.html  defaults  defaults.in  down.sh.in  firewall.in  functions  functions.in  setup  splash.html  up.sh.in
debian/: Makefile.am  changelog  chillispot.docs  conffiles  control  coova-chilli.chilli.default  coova-chilli.chilli.init  coova-chilli.chilli.service  copyright  dirs  postinst  rules
distro/: Makefile.am
distro/nethserver/: coova-chilli.spec.in
distro/openmoko/CONTROL/: control
distro/openmoko/usr/local/etc/chilli/: defaults  gui-config-default.ini
distro/redhat/: coova-chilli.spec.in
distro/suse/: coova-chilli.spec.in
distro/ubnt/: README.txt  apps.web.patch  chilli.init  chilli.rc  config  coova-chilli.mk  haserl.mk  helper  ipdown.sh  ipup.sh  wwwsh  xs2.patch
doc/: Makefile  Makefile.am  attributes  chilli-radius.5.in  chilli.8.in  chilli.conf  chilli.conf.5.in  chilli.init  chilli_opt.1.in  chilli_proxy.1.in  chilli_query.1.in  chilli_radconfig.1.in  chilli_radsec.1.in  chilli_redir.1.in  chilli_response.1.in  chilli_rtmon.1.in  chilli_script.1.in  dictionary.chillispot  dictionary.coovachilli  fmttxt.pl  hotspotlogin.cgi  http-aaa-example.php
json/: Makefile.am  README.html  bits.h  debug.c  json_object.h  json_tokener.c  linkhash.c  printbuf.c  test1.c  test2.c
miniportal/: Makefile.am  config-local.sh.in  contact.chi.in  contact_form.tmpl  error.chi.in  functions.sh.in  login.chi.in  login.tmpl  login_footer.tmpl  login_form.tmpl  login_success.tmpl  map.chi.in  payment.chi.in  payment.sh.in  register.chi.in  register_form.tmpl  service.chi.in  status.chi.in  terms.chi.in  tos.chi.in  uam.sh.in  wispr.sh.in
rpm/: coova-chilli.spec
smartclient/: MD5.as  README  bbsclib.as  hexdump.as  simplebbsc.fla  simplebbsc.swf  welcome.html
src/: Makefile  Makefile.am  Makefile.in  chilli.c  chilli.h  chilli_default_log.c  chilli_limits.h  chilli_log.c  chilli_log.h  chilli_module.c  chilli_module.h  chksum.c  cmdline.c  cmdline.c.ggo  cmdline.c.makepatch  cmdline.c.orig  cmdline.c.patch  cmdline.ggo  cmdline.h  cmdline.mini.c  cmdline.mini.gen  cmdline.mini.sh  cmdline.patch  cmdsock.c  cmdsock.h  conn.c  conn.h  debug.h  dhcp.c  dhcp.h  dns.c  dns.h  ewt.c  ewt.h  garden.c  garden.h  ifscan.c  iphash.c  iphash.h  ippool.c  (+66 more)
src/linux/: Makefile  libxt_coova.c  xt_coova.c
src/mssl/: Makefile.am
www/: ChilliLibrary.js  Makefile.am  chilliController.js  chilliform.chi  chilliform.chi.sh  chillijs.chi  chillijs.chi.sh  config.sh.in  coova.html  json_html.tmpl  wwwsh
