## Process this file with automake to produce Makefile.in
VERSION=1.0-coova.2
SUBDIRS = src doc
EXTRA_DIST = conf/chilli.conf conf/chilli.init conf/defaults \
conf/firewall conf/functions conf/splash.html \
smartclient/bbsclib.as  smartclient/hexdump.as  smartclient/MD5.as  \
smartclient/README  smartclient/simplebbsc.fla  smartclient/simplebbsc.swf

