## Process this file with automake to produce Makefile.in
SUBDIRS = src doc
EXTRA_DIST = conf/chilli.conf conf/chilli.init conf/defaults \
conf/firewall conf/functions conf/coova.html conf/coova.jpg \
smartclient/bbsclib.as  smartclient/hexdump.as  smartclient/MD5.as  \
smartclient/README  smartclient/simplebbsc.fla  smartclient/simplebbsc.swf

